# RakshaNet

./: README.md  mock_engine.py  test_mock.py  test_poly.py  test_rtree.py  test_ws.py  test_ws2.py
ais_generator/: Cargo.toml
ais_generator/src/: engine.rs  main.rs  models.rs
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.css  App.jsx  index.css
dashboard/src/components/: AlertFeed.jsx  AlertToast.jsx  DataTableView.css  DataTableView.jsx  DataView.jsx  FleetScoring.jsx  GridAnalytics.jsx  Header.jsx  MapView.jsx  PreDepartureView.jsx  SimultaneousAlerts.jsx  SplashScreen.jsx  StatsBar.jsx  TargetDesk.jsx
maritime-engine/: Cargo.toml  config.toml
maritime-engine/src/: aisstream_client.rs  alerting.rs  config.rs  dashboard_server.rs  detection.rs  dispatcher.rs  main.rs  metrics.rs  pre_departure.rs  simulator_listener.rs  spatial_index.rs  spoofing_detection.rs  types.rs  vessel_state.rs  weather_service.rs  worker.rs
simulator/: global_simulator.py  requirements.txt  simulator.py  twin.py
