[package]
name = "ais_generator"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
