[package]
name = "maritime-engine"
version = "0.1.0"
edition = "2021"
description = "Real-time maritime surveillance engine for detecting malicious vessel activity"

[[bin]]
name = "maritime-engine"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
ureq = { version = "2.9", features = ["json"] }

# WebSocket client (aisstream.io)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# WebSocket server + HTTP (dashboard)
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tower = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Spatial indexing & geometry
rstar = "0.12"
geo = "0.28"
geohash = "0.13"

# Config
toml = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
